--- a/css/quickstarter/quickstarter.less
+++ b/css/quickstarter/quickstarter.less
@@ -201,7 +201,7 @@
   @import "lib/box";
 
   @import "theme/base";
-  @import "theme/tabs";
+  @import "theme/styles";
 
 /*!
   ====================== */
