--- a/css/quickstarter/quickstarter.less
+++ b/css/quickstarter/quickstarter.less
@@ -19,7 +19,7 @@
 
 // Type
 // -------------------------------- 
-@baseFontFamily: "Segoe UI", Segoe, Candara, Frutiger, "Frutiger Linotype", Helvetica, Arial, sans-serif;
+@baseFontFamily: "Open Sans", "Segoe UI", Segoe, Candara, Frutiger, "Frutiger Linotype", Helvetica, Arial, sans-serif;
 
 @baseFontSize  : 14px;
 
@@ -190,18 +190,18 @@
   ======================
   */
 
-  @import "lib/mixins";
-  @import "lib/normalize";
-  @import "lib/toolbox";
-  @import "lib/flush";
-  @import "lib/media";
-  @import "lib/responsive";
-  @import "lib/buttons";
-  @import "lib/forms";
-  @import "lib/box";
+  @import "lib/_mixins";
+  @import "lib/_normalize";
+  @import "lib/_toolbox";
+  @import "lib/_flush";
+  @import "lib/_media";
+  @import "lib/_responsive";
+  @import "lib/_buttons";
+  @import "lib/_forms";
+  @import "lib/_box";
 
-  @import "theme/base";
-  @import "theme/styles";
+  @import "theme/_base";
+  @import "theme/_styles";
 
 /*!
   ====================== */
