--- a/css/quickstarter/theme/_base.less
+++ b/css/quickstarter/theme/_base.less
@@ -158,6 +158,14 @@ dd {}
         background-image: none;
         background-color: transparent;
         text-shadow: 0 0 transparent;
+        border-radius: 2em;
+        &:hover{
+            background: rgba(0,0,0,.2);
+            box-shadow: inset 0 2px 0 rgba(0,0,0,.2);
+        }
+    }
+    &-block{
+        display: block;
     }
 }
 
