--- a/css/quickstarter/theme/_styles.less
+++ b/css/quickstarter/theme/_styles.less
@@ -1,45 +1,37 @@
 
-@bgcolor  : #33abeb;
-@bgaccent : #0D74E1;
-
-.jumbotron{
-	padding: 200px 0;
-	//background: @bgcolor;
-	.gradient(@bgcolor, @bgaccent);
-	color: #fff;
-	margin-bottom: 80px;
-
+#container{
 	position: relative;
-	z-index: 0;
-	overflow: hidden;
-
-	text-shadow: 0 1px 0 @bgaccent;
-
-	.title{
-		margin-bottom: 40px;
+}
+#aside{
+	position: fixed;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	overflow-y: auto;
+	background: #0A141F;
+	padding: 10px;
+	width: 200px;
+	.box-model();
+	& *{
+		color: #fff;
 	}
-	.btn{
-		margin-bottom: 0.5em;
+	& a{
+		padding: 10px;
+		display: block;
+		&:hover{
+			background-color: rgba(255,255,255,0.1);
+		}
 	}
+}
+.content{
+	margin-left: 200px;
 }
 
 .logo{
-	display: block;
-	width: 128px;
+	background: url(../img/logo.png) no-repeat center center transparent;
 	height: 128px;
-	background: url(../img/logo.png) no-repeat center center;
+	width: 128px;
+	display: block;
+	margin: 20px auto;
 	text-align: center;
-	margin: 0 auto 80px;
-	position: relative;
-
-	&:after{
-	    content: "";
-		background: @bgaccent;
-	    height: 113px;
-	    position: absolute;
-	    top: 13px;
-	    transform: rotateZ(30deg) scaleX(50) translateX(9.2px);
-	    width: 20px;
-	    z-index: -1;
-	}
 }
