--- a/css/quickstarter/quickstarter.less
+++ b/css/quickstarter/quickstarter.less
@@ -19,22 +19,21 @@
 
 // Type
 // -------------------------------- 
-@baseFontFamily: "Open Sans", "Segoe UI", Segoe, Candara, Frutiger, "Frutiger Linotype", Helvetica, Arial, sans-serif;
+@baseFontFamily: "Open Sans","Segoe UI", Segoe, Candara, Frutiger, "Frutiger Linotype", Helvetica, Arial, sans-serif;
 
 @baseFontSize  : 14px;
 
-@h1FontSize    : 2em  ;
-@h2FontSize    : 1.8em;
-@h3FontSize    : 1.4em;
-@h4FontSize    : 1.2em;
-@h5FontSize    : 1em  ;
-@h6FontSize    : 0.8em;
+@h1FontSize    : 2.441em ;
+@h2FontSize    : 1.953em ;
+@h3FontSize    : 1.563em ;
+@h4FontSize    : 1.25em  ;
+@h5FontSize    : 0.8em   ;
 
-//@subFontSize   : 0.8em;
 
 // Margins
 // -------------------------------- 
-@hSpacing      : 0.2em;  //headline separation;
+@hSpacing      : 1.414em 0 0.5em;  //headline separation;
+//@hSpacing      : 0.2em;  //headline separation;
 @pSpacing      : 1em;    //paragraph separation;
 
 // Colors
@@ -51,6 +50,7 @@
 @brandInfo      : #1abc9c; //cyan
 @brandSuccess   : #27ae60; //green
 @brandPrimary   : #3498db; //blue
+@brandAlt       : #8e44ad; //violet
 @brandInverse   : #2c3e50; //black
 
 @inputDangerBorder  : @brandDanger;  //red
@@ -58,14 +58,16 @@
 @inputSuccessBorder : @brandInfo;    //green
 @inputInfoBorder    : @brandSuccess; //cyan
 @inputPrimaryBorder : @brandPrimary; //blue
+@inputAltBorder     : @brandAlt;     //violet
 @inputInverseBorder : @brandInverse; //black
 
-@messageBase    : lighten(@brandDefault ,40%); //grey
+@messageDefault : lighten(@brandDefault ,40%); //grey
 @messageDanger  : lighten(@brandDanger  ,40%); //red
 @messageWarning : lighten(@brandWarning ,40%); //yellow
 @messageInfo    : lighten(@brandInfo    ,40%); //cyan
 @messageSuccess : lighten(@brandSuccess ,40%); //green
 @messagePrimary : lighten(@brandPrimary ,40%); //blue
+@messageAlt     : lighten(@brandAlt     ,40%); //violet
 @messageInverse : lighten(@brandInverse ,40%); //black
 
 
@@ -79,6 +81,7 @@
 @elemSpacing : 0.5em;     // 4
 @elemIndent  : 1em;       // 5
 @elemBlock   : 0.5em 1em; // 6
+@elemRadius  : 3px;       // 
 
 
 
@@ -104,6 +107,7 @@
 // button separation
 
 @btnPadding      : @elemBlock;
+@btnRadius       : @elemRadius;
 
 // Complex
 // -------------------------------- 
@@ -121,21 +125,28 @@
 //                                              ┘
 
 // Forms
-
+// -------------------------------- 
 @labelWidth      : @elemWidth;
 @labelSpan       : @elemSpan;
 @inputPadding    : @elemPadding;
 @inputSpacing    : @elemSpacing;
+@inputRadius     : @elemRadius;
 
 
 // Table
 // -------------------------------- 
-@tableBorder   : 1px solid #666;
-@tablePadding  : @elemPadding;
+@tableBgHead     : @brandDefault;
+@tableBorder     : 1px solid lighten(@subFontColor, 20%);
+@tablePadding    : @elemPadding;
+@tableBgOdd      : lighten(@brandDefault, 2%);
+
+
 
 // Media
 // -------------------------------- 
 @mediaSpan       : @elemSpan;
+
+
 
 // Definition lists
 // -------------------------------- 
@@ -144,13 +155,17 @@
 @defSpacing      : @elemSpacing;
 
 
+
+
 // Layout
 // ================================ 
 @gutter     : 10px;
 
+//grids separated by comma
+//@grids: "cols:12";
+@grids: "triad:3", "quad:4";
 
-@namespaces : triad, quad;
-@grids      : 3    , 4;
+
 
 // IMPORTANT!
 // Less than portrait will be consider mobile (layout fluid)
@@ -195,13 +210,20 @@
   @import "lib/_toolbox";
   @import "lib/_flush";
   @import "lib/_media";
-  @import "lib/_responsive";
+  @import "lib/_grid";
   @import "lib/_buttons";
+  @import "lib/_labels";
+  @import "lib/_badges";
+  @import "lib/_messages";
   @import "lib/_forms";
   @import "lib/_box";
 
-  @import "theme/_base";
+
   @import "theme/_styles";
+  @import "theme/_base";
+  @import "theme/_icons";
+  @import "theme/_demo";
+  @import "theme/_prism";
 
 /*!
   ====================== */
