--- a/css/quickstarter/lib/_forms.less
+++ b/css/quickstarter/lib/_forms.less
@@ -49,10 +49,17 @@
         vertical-align: middle;
 
         width: 100%;
+        /*&:invalid{
+            border-color: @brandDanger;
+            box-shadow: 0 0 5px fade(@brandDanger,50%);
+        }
+        &:valid{
+            border-color: @brandSuccess;
+            box-shadow: 0 0 5px fade(@brandSuccess,50%);
+        }*/
         &:focus{
             border-color: @brandPrimary;
-            box-shadow: 0 0 10px fade(@brandPrimary,50%);
-            outline: 0 none;
+            box-shadow: 0 0 5px fade(@brandPrimary,50%);
         }
     }
 
