--- a/css/quickstarter/theme/_base.less
+++ b/css/quickstarter/theme/_base.less
@@ -2,6 +2,8 @@
 // ======================================================================================================
 // #Basic
 // #Lists
+// #Definition lists
+// #Tables
 
 // #Basic styles - For good typographic support
 // ======================================================================================================
@@ -9,7 +11,7 @@
 body{
     // thanks to http://cssfontstack.com/
     font-family: @baseFontFamily;
-    line-height: 1.5;
+     line-height: 1.5;
     font-size: @baseFontSize;
     color: @baseFontColor;
 }
@@ -42,3 +44,96 @@ body{
 a { text-decoration: none; }
 
 p { margin-bottom: @pSpacing; }
+
+
+
+// #Lists
+// ======================================================================================================
+
+ol.list li,
+ul.list li{
+    margin-left: @listIndent;
+    margin-bottom: @listSpacing;
+}
+ul.list li       { list-style: disc        outside none; }
+ul.list li li    { list-style: square      outside none; }
+ul.list li li li { list-style: circle      outside none; }
+ol.list li       { list-style: decimal     outside none; }
+ol.list li li    { list-style: lower-alpha outside none; }
+ol.list li li li { list-style: lower-roman outside none; }
+
+// #Definition Lists
+// ======================================================================================================
+
+dl {}
+dt {}
+dd {}
+
+.dl{
+    &-list,
+    &-vertical,
+    &-horizontal{
+        margin: 0;
+        margin-bottom: @pSpacing;
+
+        dt{
+            font-weight: bold;
+            margin-bottom: @defSpacing;
+            padding-top: @defSpacing;
+        }
+        dd{
+            margin-bottom: @defSpacing;
+            //padding-top: @defSpacing;
+            margin-left: 0;
+        }
+    }
+    &-vertical{
+    }
+    &-horizontal{
+        /*display: table;
+        dt, dd{
+            display: table-cell;
+        }*/
+        dt{
+            width: @defWidth;
+            max-width: @defWidth;
+            padding-right: @defSpan;
+            text-align: right;
+            float: left;
+            clear: right;
+        }
+        dd{
+            margin-bottom: @defSpacing;
+            padding-top: @defSpacing;
+            margin-left: @defWidth + @defSpan;
+        }
+    }
+}
+
+// #Tables
+// ======================================================================================================
+.table{
+    width: 100%;
+    th,
+    td{
+        padding: @tablePadding;
+        border-bottom: @tableBorder;
+    }
+    th{
+        background: @tableBgHead;
+    }
+    &-bordered{
+        th,
+        td{
+            border: @tableBorder;
+        }
+    }
+    &-stripped{
+        tr:nth-child(odd) td{
+            background: @tableBgOdd;
+        }
+    }
+}
+
+
+
